--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,12 @@
             "Laravelcity\\Categories\\": "src/"
         }
     },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Laravelcity\\Categories\\CategoriesServiceProvider"
+            ]
+        }
+    },
     "require": {}
 }
