--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,10 @@
             ]
         }
     },
-    "require": {}
+    "require": {},
+    "config": {
+        "sort-packages": true
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
